[package]
name = "grin"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "grin"
path = "src/bin/grin.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.11"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
cursive_table_view = "0.13.2"
humansize = "1.1.0"
serde = "1"
futures = "0.3.19"
serde_json = "1"
log = "0.4"
term = "0.6"

grin_api = { path = "./api", version = "5.2.0-alpha.2" }
grin_config = { path = "./config", version = "5.2.0-alpha.2" }
grin_chain = { path = "./chain", version = "5.2.0-alpha.2" }
grin_core = { path = "./core", version = "5.2.0-alpha.2" }
grin_keychain = { path = "./keychain", version = "5.2.0-alpha.2" }
grin_p2p = { path = "./p2p", version = "5.2.0-alpha.2" }
grin_servers = { path = "./servers", version = "5.2.0-alpha.2" }
grin_util = { path = "./util", version = "5.2.0-alpha.2" }

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
grin_chain = { path = "./chain", version = "5.2.0-alpha.2" }
grin_store = { path = "./store", version = "5.2.0-alpha.2" }
