[package]
name = "grin_api"
version = "5.5.1-alpha.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "APIs for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
edition = "2021"

[dependencies]
easy-jsonrpc-mw = "0.5.4"
hyper = { version = "1.10.1", features = ["full"] }
lazy_static = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
hyper-rustls = "0.27.9"
hyper-timeout = "0.5.2"
futures = "0.3"
rustls = "0.23.41"
rustls-pemfile = "1.0"
url = "2.1"
bytes = "1"
hyper-util = { version = "0.1.20", features = ["client-legacy", "server-graceful", "tokio"] }
http-body-util = "0.1.3"
subtle = "2.6.1"

grin_core = { path = "../core", version = "5.5.1-alpha.0" }
grin_chain = { path = "../chain", version = "5.5.1-alpha.0" }
grin_p2p = { path = "../p2p", version = "5.5.1-alpha.0" }
grin_pool = { path = "../pool", version = "5.5.1-alpha.0" }
grin_util = { path = "../util", version = "5.5.1-alpha.0" }
