[package]
name = "grin_chain"
version = "0.3.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
workspace = ".."
publish = false

[dependencies]
bitflags = "1"
byteorder = "1"
lmdb-zero = "0.4.4"
failure = "0.1"
failure_derive = "0.1"
croaring = "=0.3.2"
slog = { version = "~2.2", features = ["max_level_trace", "release_max_level_trace"] }
serde = "1"
serde_derive = "1"
time = "0.1"
lru-cache = "0.1"

grin_core = { path = "../core" }
grin_keychain = { path = "../keychain" }
grin_store = { path = "../store" }
grin_util = { path = "../util" }

[dev-dependencies]
grin_wallet = { path = "../wallet" }
env_logger = "0.5"
rand = "0.3"
