[package]
name = "grin_chain"
version = "1.0.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
lmdb-zero = "0.4.4"
failure = "0.1"
failure_derive = "0.1"
croaring = "0.3"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.4"
lru-cache = "0.1"

grin_core = { path = "../core", version = "1.0.1" }
grin_keychain = { path = "../keychain", version = "1.0.1" }
grin_store = { path = "../store", version = "1.0.1" }
grin_util = { path = "../util", version = "1.0.1" }

[dev-dependencies]
env_logger = "0.5"
rand = "0.5"
