[package]
name = "grin_chain"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bit-vec = "0.6"
bitflags = "1"
byteorder = "1"
croaring = "0.4.6"
enum_primitive = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
thiserror = "1"
chrono = "0.4.11"
lru-cache = "0.1"
lazy_static = "1"

grin_core = { path = "../core", version = "5.2.0-alpha.2" }
grin_keychain = { path = "../keychain", version = "5.2.0-alpha.2" }
grin_store = { path = "../store", version = "5.2.0-alpha.2" }
grin_util = { path = "../util", version = "5.2.0-alpha.2" }

[dev-dependencies]
env_logger = "0.7"
rand = "0.6"
