[package]
name = "grin_config"
version = "2.0.0-beta.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

grin_core = { path = "../core", version = "2.0.0-beta.2" }
grin_servers = { path = "../servers", version = "2.0.0-beta.2" }
grin_p2p = { path = "../p2p", version = "2.0.0-beta.2" }
grin_util = { path = "../util", version = "2.0.0-beta.2" }

[dev-dependencies]
pretty_assertions = "0.5.1"
