[package]
name = "grin_config"
version = "3.0.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

grin_core = { path = "../core", version = "3.0.0" }
grin_servers = { path = "../servers", version = "3.0.0" }
grin_p2p = { path = "../p2p", version = "3.0.0" }
grin_util = { path = "../util", version = "3.0.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
