[package]
name = "grin_config"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

grin_core = { path = "../core", version = "5.2.0-alpha.2" }
grin_servers = { path = "../servers", version = "5.2.0-alpha.2" }
grin_p2p = { path = "../p2p", version = "5.2.0-alpha.2" }
grin_util = { path = "../util", version = "5.2.0-alpha.2" }

[dev-dependencies]
pretty_assertions = "0.6.1"
