[package]
name = "grin_core"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
blake2 = { package = "blake2-rfc", version = "0.2"}
byteorder = "1"
croaring = "0.4.6"
enum_primitive = "0.1"
lazy_static = "1"
lru-cache = "0.1"
num = "0.2"
num-bigint = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
siphasher = "0.3"
thiserror = "1"
log = "0.4"
chrono = { version = "0.4.11", features = ["serde"] }
zeroize = { version = "1.1", features =["zeroize_derive"] }
bytes = "0.5"

keychain = { package = "grin_keychain", path = "../keychain", version = "5.2.0-alpha.2" }
util = { package = "grin_util", path = "../util", version = "5.2.0-alpha.2" }

[dev-dependencies]
serde_json = "1"
