[package]
name = "grin_grin"
version = "0.1.0"
authors = ["Ignotus Peverell <igno.peverell@protonmail.com>"]

[dependencies]
grin_api = { path = "../api" }
grin_chain = { path = "../chain" }
grin_core = { path = "../core" }
grin_store = { path = "../store" }
grin_p2p = { path = "../p2p" }
grin_util = { path = "../util" }
secp256k1zkp = { path = "../secp256k1zkp" }

env_logger="^0.3.5"
futures = "^0.1.9"
futures-cpupool = "^0.1.3"
hyper = { git = "https://github.com/hyperium/hyper" }
log = "^0.3"
time = "^0.1"
tokio-core="^0.1.1"
tokio-timer="^0.1.0"
rand = "^0.3"
