[package]
name = "grin_grin"
version = "0.1.0"
authors = ["Ignotus Peverell <igno.peverell@protonmail.com>"]
workspace = ".."

[dependencies]
grin_api = { path = "../api" }
grin_chain = { path = "../chain" }
grin_core = { path = "../core" }
grin_store = { path = "../store" }
grin_p2p = { path = "../p2p" }
grin_pool = { path = "../pool" }
grin_util = { path = "../util" }
grin_keychain = { path = "../keychain" }
grin_wallet = { path = "../wallet" }
grin_pow = { path = "../pow" }
secp256k1zkp = { git = "https://github.com/mimblewimble/rust-secp256k1-zkp" }

futures = "^0.1.15"
futures-cpupool = "^0.1.3"
hyper = { git = "https://github.com/hyperium/hyper" }
slog = "^2.0.12"
time = "^0.1"
serde = "~1.0.8"
serde_derive = "~1.0.8"
tokio-core="^0.1.1"
tokio-timer="^0.1.0"
rand = "^0.3"
itertools = "~0.6.0"

[dev_dependencies]
blake2-rfc = "~0.2.17"
