[package]
name = "grin_grin"
version = "0.1.0"
authors = ["Ignotus Peverell <igno.peverell@protonmail.com>"]
workspace = ".."

[dependencies]
grin_api = { path = "../api" }
grin_chain = { path = "../chain" }
grin_core = { path = "../core" }
grin_store = { path = "../store" }
grin_p2p = { path = "../p2p" }
grin_pool = { path = "../pool" }
grin_util = { path = "../util" }
grin_keychain = { path = "../keychain" }
grin_wallet = { path = "../wallet" }
grin_pow = { path = "../pow" }

futures = "^0.1.15"
futures-cpupool = "^0.1.3"
hyper = "~0.11.4"
slog = { version = "^2.0.12", features = ["max_level_trace", "release_max_level_trace"] }
time = "^0.1"
serde = "~1.0.8"
serde_derive = "~1.0.8"
serde_json = "=1.0.7"
tokio-core="~0.1.1"
tokio-timer="~0.1.0"
rand = "^0.3"
router = "~0.5.1"
itertools = "~0.6.0"

[dev_dependencies]
blake2-rfc = "~0.2.17"
