[package]
name = "grin_keychain"
version = "1.1.1-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
rand = "0.6"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
lazy_static = "1"
zeroize = "0.8.0"

digest = "0.7"
hmac = "0.6"
ripemd160 = "0.7"
sha2 = "0.7"
pbkdf2 = "0.2"

grin_util = { path = "../util", version = "1.1.1-beta.1" }
