[package]
name = "grin_keychain"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
rand = "0.6"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
lazy_static = "1"
zeroize = { version = "1.1", features =["zeroize_derive"] }

digest = "0.9"
hmac = "0.11"
ripemd160 = "0.9"
sha2 = "0.9"
pbkdf2 = "0.8"

grin_util = { path = "../util", version = "5.2.0-alpha.2" }
