[package]
name = "grin_p2p"
version = "1.0.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
lmdb-zero = "0.4.4"
net2 = "0.2"
num = "0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

grin_core = { path = "../core", version = "1.0.1" }
grin_store = { path = "../store", version = "1.0.1" }
grin_util = { path = "../util", version = "1.0.1" }

[dev-dependencies]
grin_pool = { path = "../pool", version = "1.0.1" }
