[package]
name = "grin_pool"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
thiserror = "1"
log = "0.4"
chrono = "0.4.11"

grin_core = { path = "../core", version = "5.2.0-alpha.2" }
grin_keychain = { path = "../keychain", version = "5.2.0-alpha.2" }
grin_util = { path = "../util", version = "5.2.0-alpha.2" }

[dev-dependencies]
grin_chain = { path = "../chain", version = "5.2.0-alpha.2" }
