[package]
name = "grin_pow"
version = "0.1.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
workspace = ".."
publish = false

[dependencies]
blake2-rfc = "~0.2.17"
rand = "^0.3"
time = "^0.1"
slog = { version = "^2.0.12", features = ["max_level_trace", "release_max_level_trace"] }
lazy_static = "~0.2.8"
serde = "~1.0.8"
serde_derive = "~1.0.8"

grin_core = { path = "../core" }
grin_util = { path = "../util" }

[dependencies.cuckoo_miner]
git = "https://github.com/mimblewimble/cuckoo-miner"
tag = "grin_integration_23"
#path = "../../cuckoo-miner"
#uncomment this feature to turn off plugin builds
#features=["no-plugin-build"]
#uncomment this feature to enable cuda builds (cuda toolkit must be installed)
#features=["build-cuda-plugins"]
