[package]

name = "secp256k1zkp"
version = "0.1.0"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>",
            "Ignotus Peverell <igno.peverell@protonmail.com>" ]
license = "CC0-1.0"
description = "Rust bindings for Pieter Wuille's `libsecp256k1` library, augmented with pedersen commitments. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"

build = "build.rs"
[build-dependencies]
gcc = "0.3"

[lib]
name = "secp256k1zkp"
path = "src/lib.rs"

[features]
unstable = []
default = []
dev = ["clippy"]

[dependencies]
arrayvec = "0.3"
clippy = {version = "0.0", optional = true}
rand = "0.3"
libc = "0.1"
rustc-serialize = "0.3"
serde = "~1.0.8"
serde_json = "~1.0.2"
