[package]
name = "grin_servers"
version = "5.2.0-alpha.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.13"
hyper-rustls = "0.20"
fs2 = "0.4"
futures = "0.3"
http = "0.2"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.11"
tokio = {version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
walkdir = "2.3.1"

grin_api = { path = "../api", version = "5.2.0-alpha.2" }
grin_chain = { path = "../chain", version = "5.2.0-alpha.2" }
grin_core = { path = "../core", version = "5.2.0-alpha.2" }
grin_keychain = { path = "../keychain", version = "5.2.0-alpha.2" }
grin_p2p = { path = "../p2p", version = "5.2.0-alpha.2" }
grin_pool = { path = "../pool", version = "5.2.0-alpha.2" }
grin_store = { path = "../store", version = "5.2.0-alpha.2" }
grin_util = { path = "../util", version = "5.2.0-alpha.2" }
