[package]
name = "grin_store"
version = "5.4.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
edition = "2021"

[dependencies]
byteorder = "1"
croaring = "1.0.1"
libc = "0.2"
heed = "0.22.1"
memmap = "0.7"
tempfile = "3.1"
serde = "1"
serde_derive = "1"
thiserror = "1"
log = "0.4"

grin_core = { path = "../core", version = "5.4.1" }
grin_util = { path = "../util", version = "5.4.1" }

[dev-dependencies]
chrono = "0.4.11"
rand = "0.6"
filetime = "0.2"
env_logger = "0.7"
