[package]
name = "grin_util"
version = "0.4.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
workspace = ".."
publish = false

[dependencies]
backtrace = "0.3"
base64 = "0.9"
byteorder = "1"
lazy_static = "1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = "0.4"
parking_lot = {version = "0.6"}

[dependencies.secp256k1zkp]
git = "https://github.com/mimblewimble/rust-secp256k1-zkp"
tag = "grin_integration_28"
#path = "../../rust-secp256k1-zkp"
features = ["bullet-proof-sizing"]
