[package]
name = "grin_wallet"
version = "0.1.0"
authors = [
	"Ignotus Peverell <igno_peverell@protonmail.com>",
	"Laurent Meunier <laurent.meunier95@gmail.com>",
	"Antioch Peverell",
]

[dependencies]

byteorder = "1"
slog = { version = "^2.0.12", features = ["max_level_trace", "release_max_level_trace"] }
rand = "^0.3"
blake2-rfc = "~0.2.17"
serde = "~1.0.8"
serde_derive = "~1.0.8"
serde_json = "=1.0.7"
bodyparser = "~0.7.0"
futures = "^0.1.15"
iron = "~0.5.1"
hyper = "~0.11.4"
tokio-core="~0.1.1"
tokio-retry="~0.1.0"
router = "~0.5.1"
prettytable-rs = "^0.6"
term = "~0.4.6"
grin_api = { path = "../api" }
grin_core = { path = "../core" }
grin_keychain = { path = "../keychain" }
grin_util = { path = "../util" }
